# workbench

./: .gitignore  README.md  clean.sh
Algorithms/: Algorithms.ipynb  Distributed Transaction.ipynb  Graph.ipynb  Patterns of Distributed Systems.ipynb  Searching.ipynb  Sorting.ipynb  String.ipynb
C/: C.ipynb  README.md  _ckernel.ipynb  _gcc.ipynb  _gcc_use_ipython.ipynb  _jupyter-c-kernel.ipynb  _jupyter-cpp-kernel.ipynb
CommonLisp/: _common-lisp-jupyter.ipynb  clean.sh  common.lisp
Compiler/: ATN.drawio  ATN.ipynb  Compiler.ipynb  _tree-sitter.ipynb  clean.sh
ConceptMap/: CmapAboutCmaps.cmap  CmapAboutCmaps.url  project.idx
Concurrency and Parallel/: CUDA.ipynb  Java Concurrency.ipynb  MPI.ipynb  OpenMP.ipynb  Pthreads.ipynb  Python asyncio.ipynb  _index.ipynb  performance.ipynb
DataEngineering/: DataEngineering.ipynb  Database Internals.ipynb  Databases.ipynb  Distributed Transaction.ipynb  Flink.ipynb  Spark.ipynb  clean.sh  doris.ipynb  etcd.ipynb
DevOps/: APM.ipynb  Gradle.ipynb  Kubernetes.ipynb  Python_DevOps.ipynb  Reactive.ipynb  Security.ipynb  _DevOps.ipynb
Golang/: _gonb.ipynb
Haskell/: _IHaskell.ipynb  clean.sh  docker-compose.yml
Java/: JVM.ipynb  Java IO.ipynb  Java Performance.ipynb  Java.ipynb  Tomcat.ipynb  _jjava.ipynb  clean.sh
Java/tools/example-jvmti/: CMakeLists.txt  HelloWorld.java  README.md  exjvmti.c
Machine Learning/: Agents.ipynb  Dify.ipynb  LangChain.ipynb  book.LLM Engineers Handbook.ipynb  example-LLM.ipynb
OCaml/: _OCaml.ipynb  clean.sh
OS/: APUE.ipynb  Linux Kernel.ipynb  MSYS2.ipynb  TLPI.ipynb  clean.sh  (+10 more)
(+1367 files in other folders)
